--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="index.scss" />
+    <link rel="stylesheet" href="index.css" />
     <script type="module" src="index.tsx"></script>
   </head>
   <body>
