--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="index.css" />
-    <script type="module" src="index.tsx"></script>
+    <link rel="stylesheet" href="src/index.css" />
+    <script type="module" src="src/index.tsx"></script>
   </head>
   <body>
     <div id="root"></div>
